force-app/main/default/objects/Tenant__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Unique API key for authenticating inbound webhook requests from this tenant.</description>
    <externalId>true</externalId>
    <label>API Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>