force-app/main/default/objects/Tenant__c/fields/Slack_Webhook_Path__c.field-meta.xml
<CustomField>
    <fullName>Slack_Webhook_Path__c</fullName>
    <description>The path portion of the Slack webhook URL (e.g., /services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX).</description>
    <inlineHelpText>Enter the path portion of your Slack webhook URL. Do not include https://hooks.slack.com.</inlineHelpText>
    <label>Slack Webhook Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>