force-app/main/default/objects/Tenant__c/fields/Subscription_Tier__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier__c</fullName>
    <description>The pricing tier this tenant is subscribed to.</description>
    <label>Subscription Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
                <default>true</default>
                <label>Starter</label>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>