force-app/main/default/objects/Tenant__c/fields/Teams_Webhook_Path__c.field-meta.xml
<CustomField>
    <fullName>Teams_Webhook_Path__c</fullName>
    <description>The path portion of the Microsoft Teams webhook URL. Store only the relative path for the Teams_Webhook Named Credential.</description>
    <inlineHelpText>Enter the relative path portion of your Teams webhook URL. Do not include https://outlook.office.com.</inlineHelpText>
    <label>Teams Webhook Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>